@@ -96,6 +96,8 @@ Core and builtins
 Library
 -------
 
+- Patch #1355023: support whence argument for GzipFile.seek.
+
 - Patch #1065257: Support passing open files as body in 
   HTTPConnection.request().
 
